{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 10,
  "lineage": "dde6bfae-0a15-bf96-6fd4-65226693f5ca",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ctb_web_server_identifier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-0285b346da9d5571c",
            "description": "Security Group with no inbound rules",
            "filter": null,
            "id": "sg-0285b346da9d5571c",
            "name": "ctb_web_server_identifier_sg",
            "tags": {
              "Name": "ctb_web_server_identifier_sg"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0b4a77fa3dc552e4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "default_for_az": false,
            "id": "subnet-0b4a77fa3dc552e4f",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_1"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-041c1d6772f778695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "default_for_az": false,
            "id": "subnet-041c1d6772f778695",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_2"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0c0aa8ba7fcb50753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/23",
            "default_for_az": false,
            "id": "subnet-0c0aa8ba7fcb50753",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_3"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0dfa1fbccb14885b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/23",
            "default_for_az": false,
            "id": "subnet-0dfa1fbccb14885b8",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_4"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ctb_subnet_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0a5d03e37645eb8ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/23",
            "default_for_az": false,
            "id": "subnet-0a5d03e37645eb8ee",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "ctb_subnet_6"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cloudtechbitsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:vpc/vpc-09464e2788a470e04",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-037d0efe360dfb40a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-c60b46be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09464e2788a470e04",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0805b5e91da6bb5b1",
            "ipv6_cidr_block": "2600:1f18:1d9b:2b00::/56",
            "main_route_table_id": "rtb-0ad84709d37488236",
            "owner_id": "058775512105",
            "state": "available",
            "tags": {
              "Name": "Cloud Tech Bits"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ctb-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:loadbalancer/app/ctb-alb/34b63d5e3a8b1f78",
            "arn_suffix": "app/ctb-alb/34b63d5e3a8b1f78",
            "dns_name": "ctb-alb-1890878917.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058775512105:loadbalancer/app/ctb-alb/34b63d5e3a8b1f78",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ctb-alb",
            "security_groups": [
              "sg-081b05e80d48323f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041c1d6772f778695"
              },
              {
                "subnet_id": "subnet-0a5d03e37645eb8ee"
              },
              {
                "subnet_id": "subnet-0b4a77fa3dc552e4f"
              },
              {
                "subnet_id": "subnet-0c0aa8ba7fcb50753"
              },
              {
                "subnet_id": "subnet-0dfa1fbccb14885b8"
              }
            ],
            "subnets": [
              "subnet-041c1d6772f778695",
              "subnet-0a5d03e37645eb8ee",
              "subnet-0b4a77fa3dc552e4f",
              "subnet-0c0aa8ba7fcb50753",
              "subnet-0dfa1fbccb14885b8"
            ],
            "vpc_id": "vpc-09464e2788a470e04",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ctb_alb_sg",
            "data.aws_subnet.ctb_subnet_1",
            "data.aws_subnet.ctb_subnet_2",
            "data.aws_subnet.ctb_subnet_3",
            "data.aws_subnet.ctb_subnet_4",
            "data.aws_subnet.ctb_subnet_6",
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ctb-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:listener/app/ctb-alb/34b63d5e3a8b1f78/2e9de9bb155c356f",
            "certificate_arn": "arn:aws:acm:us-east-1:058775512105:certificate/cda0a292-bd24-4a17-9acf-0dbaef468bcd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:targetgroup/ctb-blog-target-group/bb26370e86748ae8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058775512105:listener/app/ctb-alb/34b63d5e3a8b1f78/2e9de9bb155c356f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:loadbalancer/app/ctb-alb/34b63d5e3a8b1f78",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ctb-alb",
            "aws_lb_target_group.ctb-blog-target-group",
            "aws_security_group.ctb_alb_sg",
            "data.aws_acm_certificate.ctb_cert",
            "data.aws_subnet.ctb_subnet_1",
            "data.aws_subnet.ctb_subnet_2",
            "data.aws_subnet.ctb_subnet_3",
            "data.aws_subnet.ctb_subnet_4",
            "data.aws_subnet.ctb_subnet_6",
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ctb_vpctools_listner_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:targetgroup/ctb-vpctools-target-group/b41ff7e9aa2d1cad",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:listener-rule/app/ctb-alb/34b63d5e3a8b1f78/2e9de9bb155c356f/16862630ff0717d3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "vpctools.cloudtechbits.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058775512105:listener-rule/app/ctb-alb/34b63d5e3a8b1f78/2e9de9bb155c356f/16862630ff0717d3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:listener/app/ctb-alb/34b63d5e3a8b1f78/2e9de9bb155c356f",
            "priority": 1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ctb-alb",
            "aws_lb_listener.ctb-alb-listener",
            "aws_lb_target_group.ctb-blog-target-group",
            "aws_lb_target_group.ctb-vpctools-target-group",
            "aws_security_group.ctb_alb_sg",
            "data.aws_acm_certificate.ctb_cert",
            "data.aws_subnet.ctb_subnet_1",
            "data.aws_subnet.ctb_subnet_2",
            "data.aws_subnet.ctb_subnet_3",
            "data.aws_subnet.ctb_subnet_4",
            "data.aws_subnet.ctb_subnet_6",
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ctb-blog-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:targetgroup/ctb-blog-target-group/bb26370e86748ae8",
            "arn_suffix": "targetgroup/ctb-blog-target-group/bb26370e86748ae8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/ping.html",
                "port": "1980",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058775512105:targetgroup/ctb-blog-target-group/bb26370e86748ae8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ctb-blog-target-group",
            "port": 1980,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ctb-vpctools-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058775512105:targetgroup/ctb-vpctools-target-group/b41ff7e9aa2d1cad",
            "arn_suffix": "targetgroup/ctb-vpctools-target-group/b41ff7e9aa2d1cad",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "1981",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058775512105:targetgroup/ctb-vpctools-target-group/b41ff7e9aa2d1cad",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ctb-vpctools-target-group",
            "port": 1981,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ctb_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-081b05e80d48323f9",
            "description": "Security Group for the Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081b05e80d48323f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ctb_alb_sg",
            "name_prefix": "",
            "owner_id": "058775512105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ctb_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ctb_web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-0ab03773200424f5f",
            "description": "Security Group for the servers",
            "egress": [],
            "id": "sg-0ab03773200424f5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 1980,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081b05e80d48323f9"
                ],
                "self": false,
                "to_port": 1981
              }
            ],
            "name": "ctb_web_server_sg",
            "name_prefix": "",
            "owner_id": "058775512105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ctb_web_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ctb_alb_sg",
            "data.aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    }
  ]
}